# kraken-rs

./: Cargo.toml  LICENSE  README.md
futures/: Cargo.toml
futures/examples/: accounts.rs  balance.rs  book.rs  buy_and_cancel.rs  fills.rs  open_positions.rs  ping.rs  test.rs  tickers.rs
futures/src/: errors.rs  lib.rs  side.rs
futures/src/common/: constants.rs  fill_type.rs  mod.rs  order.rs  send_order_status.rs  side.rs  status.rs  symbol.rs  trigger_signal.rs
futures/src/rest/: client.rs  mod.rs  models.rs
futures/src/rest/models/: accounts.rs  cancel_all_orders.rs  cancel_order.rs  mod.rs  open_positions.rs  orderbook.rs  send_order.rs  tickers.rs
futures/src/ws/: client.rs  command.rs  message.rs  mod.rs
futures/src/ws/message/: constants.rs  mod.rs
futures/tests/: private.rs  public.rs
spot/: Cargo.toml
spot/src/: errors.rs  lib.rs  rest.rs
spot/src/rest/: client.rs  models.rs
spot/src/rest/models/: private.rs  public.rs
spot/src/ws/: client.rs
