[package]
name = "kraken-futures"
version = "0.1.0"
authors = ["Weiyüen Wu <doomsplayer@gmail.com>"]
edition = "2018"
description = "Rust client for Kraken. Please look at tests/examples for detail usage at current stage."
license = "MIT"
documentation = "https://docs.rs/kraken"
repository = "https://github.com/dovahcrow/kraken-rs"
readme = "README.md"
categories = ["api-bindings"]

[badges]
travis-ci = { repository = "dovahcrow/kraken-rs", branch = "master" }

[dependencies]
futures = { version = "0.3", features = ["async-await"] }

tokio = { version = "0.2", features = ["time", "macros"] }
tungstenite = "0.10"
tokio-tungstenite = { version = "0.10", features = ["tls"]}
http = "0.2"
reqwest = { version = "0.10.0", features = ["json"] }
url = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.6"

log = "0.4"
shrinkwraprs = "0.3"
chrono = { version = "0.4", features = ["serde"] }
ring = "0.16"
base64 = "0.12"
uuid = { version = "0.8", features = ["serde"] }

fehler = "1"
thiserror = "1"
backtrace = "0.3"
# anyhow = "1"

[dev-dependencies]
structopt = "0.3"
env_logger = "0.7"
dotenv = "0.15"
anyhow = "1"
