[package]
name = "kraken-spot"
version = "0.1.0"
authors = ["Weiyüen Wu <doomsplayer@gmail.com>"]
edition = "2018"
description = "Rust client for Kraken. Please look at tests/examples for detail usage at current stage."
license = "MIT"
documentation = "https://docs.rs/kraken"
repository = "https://github.com/dovahcrow/kraken-rs"
readme = "README.md"
categories = ["api-bindings"]

[badges]
travis-ci = { repository = "dovahcrow/kraken-rs", branch = "master" }

[dependencies]
futures = { version = "0.3", features = ["async-await"] }
tokio = { version = "0.2", features = ["time", "macros"] }
tungstenite = "0.10"
tokio-tungstenite = { version = "0.10", features = ["tls"]}
url = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
log = "0.4"
derive_builder = "0.9"
pin-project = "0.4"
shrinkwraprs = "0.3"
regex = "1"
lazy_static = "1"
http = "0.2"
chrono = "0.4"
ring = "0.16"
reqwest = { version = "0.10.0", features = ["json"] }
hex = "0.4"
structopt = "0.3"
serde_urlencoded = "0.6"
base64 = "0.12"

fehler = "1"
thiserror = "1"
failure = "0.1"
# anyhow = "1"

[dev-dependencies]
env_logger = "0.7"
dotenv = "0.15"
